grammar.ebnf
(* ================================================================ *)
(* Mathic Grammar                                                   *)
(* ================================================================ *)
(*                                                                  *)
(* Notation:                                                        *)
(*   [ A ]     -- optional (zero or one)                            *)
(*   { A }     -- repetition (zero or more)                         *)
(*   UPPER     -- terminal token class (IDENT, INT, etc.)           *)
(*   lower     -- nonterminal                                       *)
(*                                                                  *)
(* LL(1) grammar                                                    *)
(* ================================================================ *)


(* ================================================================ *)
(* Program                                                          *)
(* ================================================================ *)

program       = top_decl { top_decl } ;
top_decl      = func_decl
                | struct_decl
                | imports_decls
                | exand_decl
                ;
imports_decls = 'imp' import_path ';' ;
func_decl     = 'df' IDENT '(' [ param_list ] ')' [ type ] block ;
struct_decl   = 'struct' IDENT '{' [ struct_fields ] '}' ;
expand_decl   = 'expand' path '{' [ func_decl ] '}' ;


(* ================================================================ *)
(* Declarations                                                     *)
(* ================================================================ *)

declaration   = func_decl
                | struct_decl
                | var_decl
                | sym_decl
                ;
var_decl      = 'let' IDENT ':' type '=' expr ';' ;
sym_decl      = 'sym' IDENT ':' type ';' ;


(* ================================================================ *)
(* Statements                                                       *)
(* ================================================================ *)

stmt          = declaration
                | for_stmt
                | while_stmt
                | if_stmt
                | return_stmt
                | expr_stmt
                | block
                ;
for_stmt      = 'for' IDENT 'in' expr_no_init
                ( '..' expr_no_init block
                | block
                ) ;
while_stmt    = 'while' expr_no_init block ;
if_stmt       = 'if' expr_no_init block [ 'else' block ] ;
return_stmt   = 'return' expr ';' ;
expr_stmt     = expr ';' ;
block         = '{' { stmt } '}' ;


(* ================================================================ *)
(* Expressions                                                      *)
(* ================================================================ *)
(* Precedence (lowest to highest):                                  *)
(*   1. or                                                          *)
(*   2. and                                                         *)
(*   3. == !=                                                       *)
(*   4. < > <= >=                                                   *)
(*   5. + -                                                         *)
(*   6. * /                                                         *)
(*   7. unary (! -)                                                 *)
(*   8. call (() [] .)                                              *)

expr          = assignment ;
assignment    = IDENT { '.' IDENT } '=' expr
                | initializer
                ;
initializer   = expr_no_init [ struct_init ] ;
expr_no_init  = logical_or ;
logical_or    = logical_and { 'or' logical_and } ;
logical_and   = equality { 'and' equality } ;
equality      = comparison { ( '==' | '!=' ) comparison } ;
comparison    = term { ( '>' | '>=' | '<' | '<=' ) term } ;
term          = factor { ( '+' | '-' ) factor } ;
factor        = unary { ( '*' | '/' ) unary } ;
unary         = ( '!' | '-' ) unary
                | call
                ;
call          = primary { '(' [ arg_list ] ')' | '.' IDENT
                | '[' bracket_args ']' } ;
bracket_args  = substitution ;
struct_init   = '{' IDENT ':' expr { ',' IDENT ':' expr } '}' ;
substitution  = IDENT '=' expr { ',' IDENT '=' expr } ;
primary       = 'true' | 'false' | path | INT | FLOAT | STRING | '(' expr ')' ;


(* ================================================================ *)
(* Utilities                                                        *)
(* ================================================================ *)

param_list    = [ 'self' ',' ] param_list
                | ( IDENT ':' type ) { ',' ( IDENT ':' type ) } ;
struct_fields = [ 'pub' ] IDENT ':' type { ',' [ 'pub' ] IDENT ':' type } ;
arg_list      = expr { ',' expr } ;
import_path   = IDENT
                [ '::' ( import_path
                | '*'
                | '{' import_path { ',' import_path } '}'
                ) ] ;
path          = IDENT { '::' IDENT } ;
type          = path { '<' IDENT '>' } ;

(* ---- Terminal token classes ---- *)
(* IDENT    : [a-zA-Z_][a-zA-Z0-9_]*                                *)
(* INT      : '0' | [1-9] [0-9]*                                    *)
(* FLOAT    : [0-9]+ '.' [0-9]+                                     *)
(* STRING   : '"' [^"]* '"'                                         *)
